# ecs

./: .gitignore  BLOG.md  CMakeLists.txt  Makefile  README.md  SDL_handler.h  TODO.md  bg.cpp  bg_entity_type.h  build.sh  cleanup.cpp  collision_pair.h  components.h  create.cpp  create_renderer.cpp  create_window.cpp  distance.cpp  enemy_type.h  entity_id.h  fps.cpp  frame_time.cpp  generator_component.h  generator_set_active.cpp  get_next_entity_id.cpp  get_num_enemies_killed.cpp  handle_input.cpp  handle_input_component.cpp  init.cpp  init_debug_texture_rects.cpp  init_gfont.cpp  init_img.cpp  init_rng.cpp  init_target_texture.cpp  init_target_texture_rects.cpp  init_ttf.cpp  load.cpp  load_coin_sheet_texture.cpp  load_debug_text.cpp  load_eyeball_sheet_texture.cpp  load_knife_sheet_texture.cpp  (+31 more)
config/: bg_sprites.json  enemy-bullets.json  game.json  generators-bats-eyeballs-goblins-2.json  generators.json  textures.json
include/: components.h  enemy_bullets.h  enemy_type.h  entity_type.h  gameconfig.h  mPrint.h  powerup_type.h  rotation_pair.h  sprite_pair.h
src/: bg.cpp  cleanup.cpp  create.cpp  fps.cpp  handle_input.cpp  init.cpp  load.cpp  main.cpp  render.cpp  spawn.cpp  tools.cpp  update.cpp
